--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
           <div class="column has-text-centered">
             <!-- TODO: Replace with your paper title -->
             <h1 class="title is-1 publication-title">
-              Spectral Masking Model for Vocal Clarity 
+              Spectral Masking Model <br>
+              for Vocal Clarity 
             </h1>
             <div class="is-size-5 publication-authors">
               <!-- TODO: Replace with your paper authors and their personal links -->
