--- a/index.html
+++ b/index.html
@@ -57,8 +57,7 @@
           <div class="column has-text-centered">
             <!-- TODO: Replace with your paper title -->
             <h1 class="title is-1 publication-title">
-              Spectral Masking Model <br>
-              for Vocal Clarity 
+              Mini-project title <br>
             </h1>
             <div class="is-size-5 publication-authors">
               <!-- TODO: Replace with your paper authors and their personal links -->
@@ -102,30 +101,7 @@
         <h2 class="title is-3">Description</h2>
         <div class="content has-text-justified">
           <p>
-This project investigates the perceptual interactions 
-between vocal and instrumental components in musical 
-mixtures through a computational model of spectral masking. 
-Grounded in psychoacoustic theory, particularly the 
-framework of critical bands and auditory 
-filterbanks (Zwicker & Fastl, 1999), the project aims to 
-quantify how overlapping spectral energy from 
-accompanying instruments reduces the perceived prominence 
-of the vocal signal. The methodology involves decomposing 
-isolated vocal and full mix signals into 
-Bark or ERB-scale frequency bands, 
-computing time-varying energy distributions, 
-and deriving a masking ratio that reflects 
-the degree of perceptual interference. 
-Psychoacoustic weighting is applied to approximate 
-auditory sensitivity across frequency regions, 
-culminating in a “masking index” that captures 
-the temporal and spectral dynamics of vocal 
-masking. This model provides a perceptually 
-informed representation of vocal clarity, 
-facilitating both analytical assessment of 
-mix transparency and potential applications in 
-adaptive audio processing systems designed to 
-enhance vocal intelligibility.
+Brief description of the miniproject.
         </div>
       </div>
     </div>
