Update introduction, methods, and results text

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ Brief description of the miniproject.
           <h2 class="title is-3">Introduction</h2>
           <div class="content has-text-justified">
           <p>
-              Yo this is the Introduction text test.
+              This is the Introduction text test.
             </p>
           </div>
         </div>
@@ -136,7 +136,7 @@ Brief description of the miniproject.
           <h2 class="title is-3">Methods </h2>
           <div class="content has-text-justified">
           <p>
-              Yo this is text should include the methods.
+              This is text should include the methods.
             </p>
           </div>
         </div>
@@ -154,7 +154,7 @@ Brief description of the miniproject.
           <h2 class="title is-3">Results </h2>
           <div class="content has-text-justified">
             <p>
-              Yo this text should include the results.
+              This text should include the results.
             </p>
           </div>
         </div>
