--- a/index.html
+++ b/index.html
@@ -785,7 +785,7 @@
                 <p>
                   A streamlit application for analyzing musical tension and release is available at the following link:
                   <br>
-                  <a href="https://stefbil-tensionmodel.streamlit.app/"
+                  <a href="https://stefbil-tensionmodel-smpc.streamlit.app/"
                     target="_blank">https://stefbil-tensionmodel.streamlit.app/</a>
                 </p>
                 <p>
