--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <!-- Critical CSS - Load synchronously -->
   <link rel="stylesheet" href="static/css/bulma.min.css">
-  <link rel="stylesheet" href="static/css/index.css">
+  <link rel="stylesheet" href="static/css/index.css?v=8">
   <link rel="stylesheet" href="static/css/prism.css">
 
   <!-- Non-critical CSS - Load asynchronously -->
@@ -32,7 +32,9 @@
   </noscript>
 
   <!-- Fonts - Optimized loading -->
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap"
+    rel="stylesheet">
 
   <!-- Defer non-critical JavaScript -->
   <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -52,6 +54,11 @@
     <i class="fas fa-chevron-up"></i>
   </button>
 
+  <!-- Theme Toggle -->
+  <button class="theme-toggle" onclick="toggleTheme()" title="Toggle Dark/Light Mode" aria-label="Toggle Theme">
+    <i class="fas fa-moon"></i>
+  </button>
+
   <main id="main-content">
     <section class="hero">
       <div class="hero-body">
@@ -65,7 +72,7 @@
               <div class="is-size-5 publication-authors">
                 <!-- TODO: Replace with your paper authors and their personal links -->
                 <span class="author-block">
-                  <a>Stefanos Biliousis</a></span>
+                  <a href="https://www.linkedin.com/in/stefanosbiliousis/" target="_blank">Stefanos Biliousis</a></span>
                 <span class="author-block">
                 </span>
               </div>
@@ -73,8 +80,9 @@
               <div class="is-size-5 publication-authors">
                 <!-- TODO: Replace with your institution and conference/journal info -->
                 <span class="author-block">
-                  Aalborg University, Copenhagen<br>
-                  MED7: Sound and Music Perception and Cognition<br>
+                  Aalborg University, Copenhagen, Denmark<br>
+                  Medialogy MSc<br>
+                  Sound and Music Perception and Cognition<br>
                   Semester Project
                 </span>
 
