--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
         <div class="container is-max-desktop">
           <div class="columns is-centered">
             <div class="column has-text-centered">
-              <!-- TODO: Replace with your paper title -->
               <h1 class="title is-1 publication-title">
-                A Computational Model for Predicting Perceived Tension in Electronic Dance Music Build-ups <br>
+                <span class="title-line">A Computational Model for Predicting</span>
+                <span class="title-line">Perceived Tension in Electronic Dance</span>
+                <span class="title-line">Music Buildup</span>
               </h1>
               <div class="is-size-5 publication-authors">
-                <!-- TODO: Replace with your paper authors and their personal links -->
                 <span class="author-block">
                   <a href="https://www.linkedin.com/in/stefanosbiliousis/" target="_blank">Stefanos Biliousis</a></span>
                 <span class="author-block">
@@ -78,7 +78,6 @@
               </div>
 
               <div class="is-size-5 publication-authors">
-                <!-- TODO: Replace with your institution and conference/journal info -->
                 <span class="author-block">
                   Aalborg University, Copenhagen, Denmark<br>
                   Medialogy MSc<br>
@@ -898,12 +897,6 @@
                   <a href="https://github.com/stefbil/stefbilmed7SMCP"
                     target="_blank">https://github.com/stefbil/stefbilmed7SMCP</a>
                 </p>
-                <p>
-                  Questionnaire for model evaluation:
-                  <br>
-                  <a href="https://tension-evaluation.netlify.app/"
-                    target="_blank">https://tension-evaluation.netlify.app/</a>
-                </p>
 
               </div>
             </div>
@@ -916,6 +909,5 @@
 
 
 </body>
-
 
 </html>
