--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               <h1 class="title is-1 publication-title">
                 <span class="title-line">A Computational Model for Predicting</span>
                 <span class="title-line">Perceived Tension in Electronic Dance</span>
-                <span class="title-line">Music Buildup</span>
+                <span class="title-line">Music Buildups</span>
               </h1>
               <div class="is-size-5 publication-authors">
                 <span class="author-block">
@@ -909,5 +909,6 @@
 
 
 </body>
+
 
 </html>
