--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
         <div class="container is-max-desktop">
           <div class="columns is-centered">
             <div class="column has-text-centered">
+              <!-- TODO: Replace with your paper title -->
               <h1 class="title is-1 publication-title">
-                <span class="title-line">A Computational Model for Predicting</span>
-                <span class="title-line">Perceived Tension in Electronic Dance</span>
-                <span class="title-line">Music Buildups</span>
+                A Computational Model for Predicting Perceived Tension in Electronic Dance Music Buildups <br>
               </h1>
               <div class="is-size-5 publication-authors">
+                <!-- TODO: Replace with your paper authors and their personal links -->
                 <span class="author-block">
                   <a href="https://www.linkedin.com/in/stefanosbiliousis/" target="_blank">Stefanos Biliousis</a></span>
                 <span class="author-block">
@@ -78,6 +78,7 @@
               </div>
 
               <div class="is-size-5 publication-authors">
+                <!-- TODO: Replace with your institution and conference/journal info -->
                 <span class="author-block">
                   Aalborg University, Copenhagen, Denmark<br>
                   Medialogy MSc<br>
@@ -208,7 +209,7 @@
         <div class="container is-max-desktop">
           <div class="columns is-centered has-text-centered">
             <div class="column is-four-fifths">
-              <h2 class="title is-3">Theoretical Foundations and <br>Related Work</h2>
+              <h2 class="title is-3">Theoretical Foundations and Related Work</h2>
               <div class="content has-text-justified">
                 <p>
                   Musical tension is fundamentally rooted in expectation [11]. An EDM build-up purposefully establishes
@@ -896,6 +897,12 @@
                   <br>
                   <a href="https://github.com/stefbil/stefbilmed7SMCP"
                     target="_blank">https://github.com/stefbil/stefbilmed7SMCP</a>
+                </p>
+                <p>
+                  Questionnaire for model evaluation:
+                  <br>
+                  <a href="https://tension-evaluation.netlify.app/"
+                    target="_blank">https://tension-evaluation.netlify.app/</a>
                 </p>
 
               </div>
