--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
         <div class="container is-max-desktop">
           <div class="columns is-centered has-text-centered">
             <div class="column is-four-fifths">
-              <h2 class="title is-3">Theoretical Foundations and Related Work</h2>
+              <h2 class="title is-3">Theoretical Foundations and <br>Related Work</h2>
               <div class="content has-text-justified">
                 <p>
                   Musical tension is fundamentally rooted in expectation [11]. An EDM build-up purposefully establishes
@@ -919,3 +919,4 @@
 
 
 </html>
+
