--- a/index.html
+++ b/index.html
@@ -88,14 +88,17 @@
 
               </div>
 
-              <div class="column has-text-centered">
+              <div class="is-size-10 publication-authors">
                 <div class="publication-links">
+                  <a href="https://tension-evaluation.netlify.app/" target="_blank" rel="noopener noreferrer"
+                    class="text-brand-600 hover:text-brand-700 hover:underline transition-colors">
+                    Tension Test
                   </a>
-                  </span>
+                  <span className="text-slate-300">|</span>
+                  <a href="https://tension-eval.netlify.app/" target="_blank" rel="noopener noreferrer"
+                    class="text-brand-600 hover:text-brand-700 hover:underline transition-colors">
+                    Results
                   </a>
-                  </span>
-                  </span>
-                  </span>
                 </div>
               </div>
             </div>
@@ -919,4 +922,5 @@
 
 
 </html>
+
 
